--- a/src/styles.css
+++ b/src/styles.css
@@ -864,6 +864,10 @@ body {
     & #current-score {
       top: 97%;
       text-align: center;
+      max-width: 200px;
+      width: 100%;
+      left: 50%;
+      transform: translateX(-50%);
     }
 
     & #quiz-title {
